pve-container (1.0-20) unstable; urgency=medium

  * fix bug #799: resize running CT with no loopdev.

 -- Proxmox Support Team <support@proxmox.com>  Mon, 02 Nov 2015 11:16:25 +0100

pve-container (1.0-19) unstable; urgency=medium

  * support Ubuntu 15.10

 -- Proxmox Support Team <support@proxmox.com>  Sat, 31 Oct 2015 18:39:39 +0100

pve-container (1.0-18) unstable; urgency=medium

  * depend on xz-utils

 -- Proxmox Support Team <support@proxmox.com>  Fri, 30 Oct 2015 06:48:20 +0100

pve-container (1.0-17) unstable; urgency=medium

  * fix bug #770: CPU usage stats for containers
  
  * added symlink testcase

 -- Proxmox Support Team <support@proxmox.com>  Thu, 29 Oct 2015 13:09:29 +0100

pve-container (1.0-16) unstable; urgency=medium

  * fix bug #770: implement Network stats for containers

  * LXC::Setup: chroot into the container (thanks to RACK911Labs.com for
    the hint)

  * LXC::get_primary_ips: ipv6 can be 'auto'

 -- Proxmox Support Team <support@proxmox.com>  Thu, 29 Oct 2015 11:43:30 +0100

pve-container (1.0-15) unstable; urgency=medium

  * Start a worker in lxc resize

  * move resize to have it available in the pveshell and at the rest api

  * allow to mount iso images

 -- Proxmox Support Team <support@proxmox.com>  Wed, 28 Oct 2015 11:27:46 +0100

pve-container (1.0-14) unstable; urgency=medium

  * redhat: fix unused values

 -- Proxmox Support Team <support@proxmox.com>  Thu, 22 Oct 2015 12:10:56 +0200

pve-container (1.0-13) unstable; urgency=medium

  * restore: make sure only the first pct.conf is extracted

  * redhat: don't use aliases for dual stack networking

  * redhat: use the fully qualified hostname

 -- Proxmox Support Team <support@proxmox.com>  Wed, 21 Oct 2015 08:31:24 +0200

pve-container (1.0-12) unstable; urgency=medium

  * allow /32 CIDRs and remove duplicated mask array

  * network setup: deal with gateways outside the subnet

  * redhat: use the fully qualified hostname
