@@ -2,6 +2,8 @@ pve-container (1.0-20) unstable; urgency=medium
 
   * fix bug #799: resize running CT with no loopdev.
 
+  * Setup: fix bad /dev bindmount
+
  -- Proxmox Support Team <support@proxmox.com>  Mon, 02 Nov 2015 11:16:25 +0100
 
 pve-container (1.0-19) unstable; urgency=medium
